<resources>
    <string name="app_name">02Kotlin</string>
    <string name="kotlin">你好 KOTLIN</string>
    <string name="icon_001">图片描述</string>
    <string name="about_weibo_icon">微博ICON</string>
    <string name="button_login">点击登录</string>
    <string name="switch_agree">是否同意</string>
    <string name="user_name">徐金辉</string>
    <string name="label">应该是一个Label</string>
    <string name="user_name_place_hodler">用户名</string>
    <string name="user_pswd_place_hodler">密码</string>
    <string name="user_icon">user_icon</string>
    <string name="version_no">版本号：1.0.0</string>
    <string name="phone_xjh">18688日色欲尽花含烟，月明欲素愁不眠。 赵瑟初停凤凰柱，蜀琴欲奏鸳鸯弦。 此曲有意无人传，愿随春风寄燕然。 忆君迢迢隔青天，昔日横波目，今作流泪泉。
        不信妾断肠，归来看取明镜前。(断肠 一作：肠断)958114
    </string>
    <string name="plus_1">+1</string>
    <string name="plus_2">+2</string>
    <string name="plus_3">+3</string>
    <string name="reset">重置</string>
    <string name="commit">提交</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">下一步</string>
    <string name="back">返回</string>
    <string name="score_record">最高得分记录</string>
    <string name="action_start">开始测试</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="text_place_holder">请输入答案!!!!</string>
</resources>



