<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="mData" type="com.example.a02kotlin.MyViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PPActivity">
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline4"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.2"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.3"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline2"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.4"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline3"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline5"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.50121653"/>
        <TextView
                android:text="@{String.valueOf(mData.number)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textField"
                app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <Button
                android:text="@string/plus_1"
                android:onClick="@{() -> mData.add(1)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_a"
                app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:backgroundTint="@color/colorPinkDeep"
                android:textColor="@color/colorWhite"/>
        <Button
                android:text="@string/plus_2"
                android:onClick="@{() -> mData.add(2)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_b"
                app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@color/colorWhite"/>
        <Button
                android:text="@string/plus_3"
                android:onClick="@{() -> mData.add(3)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_c"
                app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:backgroundTint="@android:color/holo_blue_dark"
                android:textColor="@color/colorWhite"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline7"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.6"/>
        <Button
                android:text="@string/reset"
                android:onClick="@{() -> mData.caseReset() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_reset"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                android:layout_marginTop="84dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@color/colorWhite"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

